@@ -362,6 +362,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * We no longer just give up on a missing upload base directory; it's now
   created automatically if we have sufficient permissions!
 * (bug 14479) MediaWiki:upload-maxfilesize should have a div id wrapper
+* (bug 14497) Throw visible errors in installer scripts when SQL files
+  fail due to database permission or other error
 
 
 === API changes in 1.13 ===
